fix video spacing courses

--- a/src/app/course/[id]/lesson.module.css
+++ b/src/app/course/[id]/lesson.module.css
@@ -49,6 +49,7 @@
 }
 
 .player_container {
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
